docs: update api docs for notes
